[gd_scene load_steps=17 format=3 uid="uid://r7qnwo6h65xq"]

[ext_resource type="Script" path="res://Scene/ConstructMap/3d/mapParts/SaveLoad.gd" id="1_dk6rs"]
[ext_resource type="Script" path="res://Scene/ConstructMap/3d/mapParts/line.gd" id="2_i86x4"]
[ext_resource type="Script" path="res://Scene/ConstructMap/3d/mapParts/StaticBody3D.gd" id="2_jp0c8"]
[ext_resource type="ArrayMesh" uid="uid://chr7keeariscg" path="res://import/checkpoin.res" id="3_5qipy"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wmiix"]
resource_name = "SVGMat.012"
cull_mode = 2
vertex_color_use_as_albedo = true
roughness = 0.4

[sub_resource type="ArrayMesh" id="ArrayMesh_hsti4"]
_surfaces = [{
"aabb": AABB(0, 0, -1.12867, 1.12891, 0.10001, 1.12867),
"format": 34359742465,
"index_count": 72,
"index_data": PackedByteArray(5, 0, 4, 0, 7, 0, 5, 0, 7, 0, 6, 0, 1, 0, 0, 0, 3, 0, 1, 0, 3, 0, 2, 0, 13, 0, 15, 0, 12, 0, 13, 0, 14, 0, 15, 0, 9, 0, 11, 0, 8, 0, 9, 0, 10, 0, 11, 0, 5, 0, 12, 0, 4, 0, 5, 0, 13, 0, 12, 0, 4, 0, 15, 0, 7, 0, 4, 0, 12, 0, 15, 0, 6, 0, 13, 0, 5, 0, 6, 0, 14, 0, 13, 0, 7, 0, 14, 0, 6, 0, 7, 0, 15, 0, 14, 0, 1, 0, 8, 0, 0, 0, 1, 0, 9, 0, 8, 0, 0, 0, 11, 0, 3, 0, 0, 0, 8, 0, 11, 0, 2, 0, 9, 0, 1, 0, 2, 0, 10, 0, 9, 0, 3, 0, 10, 0, 2, 0, 3, 0, 11, 0, 10, 0),
"name": "SVGMat.012",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray(0, 0, 0, 0, 205, 204, 204, 61, 96, 120, 144, 191, 0, 0, 0, 0, 205, 204, 204, 61, 254, 161, 24, 191, 48, 128, 144, 63, 205, 204, 204, 61, 254, 161, 24, 191, 48, 128, 144, 63, 205, 204, 204, 61, 96, 120, 144, 191, 0, 0, 0, 0, 205, 204, 204, 61, 242, 146, 6, 191, 0, 0, 0, 0, 205, 204, 204, 61, 0, 0, 0, 128, 48, 128, 144, 63, 205, 204, 204, 61, 0, 0, 0, 128, 48, 128, 144, 63, 205, 204, 204, 61, 242, 146, 6, 191, 0, 0, 0, 0, 0, 0, 0, 0, 96, 120, 144, 191, 0, 0, 0, 0, 0, 0, 0, 0, 254, 161, 24, 191, 48, 128, 144, 63, 0, 0, 0, 0, 254, 161, 24, 191, 48, 128, 144, 63, 0, 0, 0, 0, 96, 120, 144, 191, 0, 0, 0, 0, 0, 0, 0, 0, 242, 146, 6, 191, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 48, 128, 144, 63, 0, 0, 0, 0, 0, 0, 0, 128, 48, 128, 144, 63, 0, 0, 0, 0, 242, 146, 6, 191)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_purjp"]
resource_name = "rotateforward_Curve016"
_surfaces = [{
"aabb": AABB(0, 0, -1.12867, 1.12891, 0.10001, 1.12867),
"attribute_data": PackedByteArray(0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 37, 73, 18, 62, 0, 0, 128, 63, 37, 73, 18, 62, 0, 0, 128, 63, 37, 73, 18, 62, 0, 0, 128, 63, 37, 73, 146, 62, 0, 0, 128, 63, 37, 73, 146, 62, 0, 0, 128, 63, 37, 73, 146, 62, 0, 0, 128, 63, 183, 109, 219, 62, 0, 0, 128, 63, 183, 109, 219, 62, 0, 0, 128, 63, 183, 109, 219, 62, 0, 0, 128, 63, 37, 73, 18, 63, 0, 0, 128, 63, 37, 73, 18, 63, 0, 0, 128, 63, 37, 73, 18, 63, 0, 0, 128, 63, 110, 219, 54, 63, 0, 0, 128, 63, 110, 219, 54, 63, 0, 0, 128, 63, 110, 219, 54, 63, 0, 0, 128, 63, 183, 109, 91, 63, 0, 0, 128, 63, 183, 109, 91, 63, 0, 0, 128, 63, 183, 109, 91, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 37, 73, 18, 62, 0, 0, 128, 63, 37, 73, 18, 62, 0, 0, 128, 63, 37, 73, 18, 62, 0, 0, 128, 63, 37, 73, 146, 62, 0, 0, 128, 63, 37, 73, 146, 62, 0, 0, 128, 63, 37, 73, 146, 62, 0, 0, 128, 63, 183, 109, 219, 62, 0, 0, 128, 63, 183, 109, 219, 62, 0, 0, 128, 63, 183, 109, 219, 62, 0, 0, 128, 63, 37, 73, 18, 63, 0, 0, 128, 63, 37, 73, 18, 63, 0, 0, 128, 63, 37, 73, 18, 63, 0, 0, 128, 63, 110, 219, 54, 63, 0, 0, 128, 63, 110, 219, 54, 63, 0, 0, 128, 63, 110, 219, 54, 63, 0, 0, 128, 63, 183, 109, 91, 63, 0, 0, 128, 63, 183, 109, 91, 63, 0, 0, 128, 63, 183, 109, 91, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63),
"format": 34359742487,
"index_count": 72,
"index_data": PackedByteArray(17, 0, 14, 0, 22, 0, 17, 0, 22, 0, 19, 0, 5, 0, 2, 0, 10, 0, 5, 0, 10, 0, 7, 0, 40, 0, 45, 0, 37, 0, 40, 0, 42, 0, 45, 0, 28, 0, 33, 0, 25, 0, 28, 0, 30, 0, 33, 0, 15, 0, 36, 0, 12, 0, 15, 0, 39, 0, 36, 0, 13, 0, 46, 0, 21, 0, 13, 0, 38, 0, 46, 0, 18, 0, 41, 0, 16, 0, 18, 0, 43, 0, 41, 0, 23, 0, 44, 0, 20, 0, 23, 0, 47, 0, 44, 0, 3, 0, 24, 0, 0, 0, 3, 0, 27, 0, 24, 0, 1, 0, 34, 0, 9, 0, 1, 0, 26, 0, 34, 0, 6, 0, 29, 0, 4, 0, 6, 0, 31, 0, 29, 0, 11, 0, 32, 0, 8, 0, 11, 0, 35, 0, 32, 0),
"material": SubResource("StandardMaterial3D_wmiix"),
"name": "SVGMat.012",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 48,
"vertex_data": PackedByteArray(0, 0, 0, 0, 205, 204, 204, 61, 96, 120, 144, 191, 0, 0, 0, 0, 205, 204, 204, 61, 96, 120, 144, 191, 0, 0, 0, 0, 205, 204, 204, 61, 96, 120, 144, 191, 0, 0, 0, 0, 205, 204, 204, 61, 254, 161, 24, 191, 0, 0, 0, 0, 205, 204, 204, 61, 254, 161, 24, 191, 0, 0, 0, 0, 205, 204, 204, 61, 254, 161, 24, 191, 48, 128, 144, 63, 205, 204, 204, 61, 254, 161, 24, 191, 48, 128, 144, 63, 205, 204, 204, 61, 254, 161, 24, 191, 48, 128, 144, 63, 205, 204, 204, 61, 254, 161, 24, 191, 48, 128, 144, 63, 205, 204, 204, 61, 96, 120, 144, 191, 48, 128, 144, 63, 205, 204, 204, 61, 96, 120, 144, 191, 48, 128, 144, 63, 205, 204, 204, 61, 96, 120, 144, 191, 0, 0, 0, 0, 205, 204, 204, 61, 242, 146, 6, 191, 0, 0, 0, 0, 205, 204, 204, 61, 242, 146, 6, 191, 0, 0, 0, 0, 205, 204, 204, 61, 242, 146, 6, 191, 0, 0, 0, 0, 205, 204, 204, 61, 0, 0, 0, 128, 0, 0, 0, 0, 205, 204, 204, 61, 0, 0, 0, 128, 0, 0, 0, 0, 205, 204, 204, 61, 0, 0, 0, 128, 48, 128, 144, 63, 205, 204, 204, 61, 0, 0, 0, 128, 48, 128, 144, 63, 205, 204, 204, 61, 0, 0, 0, 128, 48, 128, 144, 63, 205, 204, 204, 61, 0, 0, 0, 128, 48, 128, 144, 63, 205, 204, 204, 61, 242, 146, 6, 191, 48, 128, 144, 63, 205, 204, 204, 61, 242, 146, 6, 191, 48, 128, 144, 63, 205, 204, 204, 61, 242, 146, 6, 191, 0, 0, 0, 0, 0, 0, 0, 0, 96, 120, 144, 191, 0, 0, 0, 0, 0, 0, 0, 0, 96, 120, 144, 191, 0, 0, 0, 0, 0, 0, 0, 0, 96, 120, 144, 191, 0, 0, 0, 0, 0, 0, 0, 0, 254, 161, 24, 191, 0, 0, 0, 0, 0, 0, 0, 0, 254, 161, 24, 191, 0, 0, 0, 0, 0, 0, 0, 0, 254, 161, 24, 191, 48, 128, 144, 63, 0, 0, 0, 0, 254, 161, 24, 191, 48, 128, 144, 63, 0, 0, 0, 0, 254, 161, 24, 191, 48, 128, 144, 63, 0, 0, 0, 0, 254, 161, 24, 191, 48, 128, 144, 63, 0, 0, 0, 0, 96, 120, 144, 191, 48, 128, 144, 63, 0, 0, 0, 0, 96, 120, 144, 191, 48, 128, 144, 63, 0, 0, 0, 0, 96, 120, 144, 191, 0, 0, 0, 0, 0, 0, 0, 0, 242, 146, 6, 191, 0, 0, 0, 0, 0, 0, 0, 0, 242, 146, 6, 191, 0, 0, 0, 0, 0, 0, 0, 0, 242, 146, 6, 191, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 48, 128, 144, 63, 0, 0, 0, 0, 0, 0, 0, 128, 48, 128, 144, 63, 0, 0, 0, 0, 0, 0, 0, 128, 48, 128, 144, 63, 0, 0, 0, 0, 0, 0, 0, 128, 48, 128, 144, 63, 0, 0, 0, 0, 242, 146, 6, 191, 48, 128, 144, 63, 0, 0, 0, 0, 242, 146, 6, 191, 48, 128, 144, 63, 0, 0, 0, 0, 242, 146, 6, 191, 0, 0, 255, 127, 255, 255, 255, 191, 255, 255, 255, 255, 255, 255, 255, 191, 255, 127, 255, 255, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 63, 255, 127, 255, 255, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 63, 255, 127, 255, 255, 255, 255, 255, 191, 255, 255, 255, 127, 255, 255, 255, 191, 255, 255, 255, 255, 255, 255, 255, 191, 255, 127, 255, 255, 255, 255, 255, 191, 255, 255, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 255, 255, 255, 255, 255, 255, 255, 191, 255, 127, 255, 255, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 63, 255, 127, 255, 255, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 63, 255, 127, 255, 255, 255, 255, 255, 191, 255, 255, 255, 127, 255, 255, 255, 191, 255, 255, 255, 255, 255, 255, 255, 191, 255, 127, 255, 255, 255, 255, 255, 191, 255, 255, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 255, 255, 255, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 63, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 63, 255, 255, 255, 127, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 255, 255, 255, 255, 255, 255, 191, 255, 255, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 255, 255, 255, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 63, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 63, 255, 255, 255, 127, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 255, 255, 255, 255, 255, 255, 191, 255, 255, 255, 127, 255, 255, 255, 191)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_hsti4")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_c0nwu"]
data = PackedVector3Array(0, 0.1, 0, 0, 0.1, -0.5257, 1.1289, 0.1, -0.5257, 0, 0.1, 0, 1.1289, 0.1, -0.5257, 1.1289, 0.1, 0, 0, 0.1, -0.5962, 0, 0.1, -1.1287, 1.1289, 0.1, -1.1287, 0, 0.1, -0.5962, 1.1289, 0.1, -1.1287, 1.1289, 0.1, -0.5962, 0, 0, 0, 1.1289, 0, -0.5257, 0, 0, -0.5257, 0, 0, 0, 1.1289, 0, 0, 1.1289, 0, -0.5257, 0, 0, -0.5962, 1.1289, 0, -1.1287, 0, 0, -1.1287, 0, 0, -0.5962, 1.1289, 0, -0.5962, 1.1289, 0, -1.1287, 0, 0.1, 0, 0, 0, -0.5257, 0, 0.1, -0.5257, 0, 0.1, 0, 0, 0, 0, 0, 0, -0.5257, 0, 0.1, -0.5257, 1.1289, 0, -0.5257, 1.1289, 0.1, -0.5257, 0, 0.1, -0.5257, 0, 0, -0.5257, 1.1289, 0, -0.5257, 1.1289, 0.1, 0, 0, 0, 0, 0, 0.1, 0, 1.1289, 0.1, 0, 1.1289, 0, 0, 0, 0, 0, 1.1289, 0.1, -0.5257, 1.1289, 0, 0, 1.1289, 0.1, 0, 1.1289, 0.1, -0.5257, 1.1289, 0, -0.5257, 1.1289, 0, 0, 0, 0.1, -0.5962, 0, 0, -1.1287, 0, 0.1, -1.1287, 0, 0.1, -0.5962, 0, 0, -0.5962, 0, 0, -1.1287, 0, 0.1, -1.1287, 1.1289, 0, -1.1287, 1.1289, 0.1, -1.1287, 0, 0.1, -1.1287, 0, 0, -1.1287, 1.1289, 0, -1.1287, 1.1289, 0.1, -0.5962, 0, 0, -0.5962, 0, 0.1, -0.5962, 1.1289, 0.1, -0.5962, 1.1289, 0, -0.5962, 0, 0, -0.5962, 1.1289, 0.1, -1.1287, 1.1289, 0, -0.5962, 1.1289, 0.1, -0.5962, 1.1289, 0.1, -1.1287, 1.1289, 0, -1.1287, 1.1289, 0, -0.5962)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gg6ta"]
resource_name = "SVGMat.015"
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_color = Color(0, 0, 0, 1)
roughness = 0.4

[sub_resource type="ArrayMesh" id="ArrayMesh_fbnq6"]
_surfaces = [{
"aabb": AABB(-3.08414e-09, 0, -0.0705421, 1.12891, 0.10001, 0.0705521),
"format": 34359742465,
"index_count": 36,
"index_data": PackedByteArray(1, 0, 2, 0, 3, 0, 0, 0, 1, 0, 3, 0, 5, 0, 7, 0, 6, 0, 4, 0, 7, 0, 5, 0, 1, 0, 6, 0, 2, 0, 1, 0, 5, 0, 6, 0, 2, 0, 7, 0, 3, 0, 2, 0, 6, 0, 7, 0, 0, 0, 5, 0, 1, 0, 0, 0, 4, 0, 5, 0, 3, 0, 4, 0, 0, 0, 3, 0, 7, 0, 4, 0),
"name": "SVGMat.015",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray(0, 0, 0, 0, 205, 204, 204, 61, 79, 13, 150, 49, 215, 240, 83, 177, 205, 204, 204, 61, 95, 120, 144, 189, 48, 128, 144, 63, 205, 204, 204, 61, 102, 120, 144, 189, 48, 128, 144, 63, 205, 204, 204, 61, 185, 35, 65, 179, 0, 0, 0, 0, 0, 0, 0, 0, 79, 13, 150, 49, 215, 240, 83, 177, 0, 0, 0, 0, 95, 120, 144, 189, 48, 128, 144, 63, 0, 0, 0, 0, 102, 120, 144, 189, 48, 128, 144, 63, 0, 0, 0, 0, 185, 35, 65, 179)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_yie71"]
resource_name = "rotateforward_Curve019"
_surfaces = [{
"aabb": AABB(-3.08414e-09, 0, -0.0705421, 1.12891, 0.10001, 0.0705521),
"attribute_data": PackedByteArray(0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 171, 170, 170, 62, 0, 0, 128, 63, 171, 170, 170, 62, 0, 0, 128, 63, 171, 170, 170, 62, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 171, 170, 170, 62, 0, 0, 128, 63, 171, 170, 170, 62, 0, 0, 128, 63, 171, 170, 170, 62, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63),
"format": 34359742487,
"index_count": 36,
"index_data": PackedByteArray(5, 0, 7, 0, 10, 0, 2, 0, 5, 0, 10, 0, 16, 0, 21, 0, 18, 0, 13, 0, 21, 0, 16, 0, 4, 0, 19, 0, 6, 0, 4, 0, 17, 0, 19, 0, 8, 0, 23, 0, 11, 0, 8, 0, 20, 0, 23, 0, 0, 0, 15, 0, 3, 0, 0, 0, 12, 0, 15, 0, 9, 0, 14, 0, 1, 0, 9, 0, 22, 0, 14, 0),
"material": SubResource("StandardMaterial3D_gg6ta"),
"name": "SVGMat.015",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray(0, 0, 0, 0, 205, 204, 204, 61, 79, 13, 150, 49, 0, 0, 0, 0, 205, 204, 204, 61, 79, 13, 150, 49, 0, 0, 0, 0, 205, 204, 204, 61, 79, 13, 150, 49, 215, 240, 83, 177, 205, 204, 204, 61, 95, 120, 144, 189, 215, 240, 83, 177, 205, 204, 204, 61, 95, 120, 144, 189, 215, 240, 83, 177, 205, 204, 204, 61, 95, 120, 144, 189, 48, 128, 144, 63, 205, 204, 204, 61, 102, 120, 144, 189, 48, 128, 144, 63, 205, 204, 204, 61, 102, 120, 144, 189, 48, 128, 144, 63, 205, 204, 204, 61, 102, 120, 144, 189, 48, 128, 144, 63, 205, 204, 204, 61, 185, 35, 65, 179, 48, 128, 144, 63, 205, 204, 204, 61, 185, 35, 65, 179, 48, 128, 144, 63, 205, 204, 204, 61, 185, 35, 65, 179, 0, 0, 0, 0, 0, 0, 0, 0, 79, 13, 150, 49, 0, 0, 0, 0, 0, 0, 0, 0, 79, 13, 150, 49, 0, 0, 0, 0, 0, 0, 0, 0, 79, 13, 150, 49, 215, 240, 83, 177, 0, 0, 0, 0, 95, 120, 144, 189, 215, 240, 83, 177, 0, 0, 0, 0, 95, 120, 144, 189, 215, 240, 83, 177, 0, 0, 0, 0, 95, 120, 144, 189, 48, 128, 144, 63, 0, 0, 0, 0, 102, 120, 144, 189, 48, 128, 144, 63, 0, 0, 0, 0, 102, 120, 144, 189, 48, 128, 144, 63, 0, 0, 0, 0, 102, 120, 144, 189, 48, 128, 144, 63, 0, 0, 0, 0, 185, 35, 65, 179, 48, 128, 144, 63, 0, 0, 0, 0, 185, 35, 65, 179, 48, 128, 144, 63, 0, 0, 0, 0, 185, 35, 65, 179, 0, 0, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 63, 255, 127, 255, 255, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 255, 255, 255, 255, 255, 255, 255, 191, 255, 127, 255, 255, 255, 255, 255, 191, 255, 255, 255, 255, 255, 255, 255, 191, 255, 127, 255, 255, 255, 255, 255, 191, 255, 255, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 63, 255, 127, 255, 255, 255, 255, 255, 191, 255, 255, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 63, 0, 0, 255, 127, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 255, 255, 255, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 255, 255, 255, 255, 255, 255, 191, 255, 255, 255, 127, 255, 255, 255, 191, 255, 127, 0, 0, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 63, 255, 255, 255, 127, 255, 255, 255, 191)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_fbnq6")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_0hiyn"]
data = PackedVector3Array(0, 0.1, -0.0705, 1.1289, 0.1, -0.0705, 1.1289, 0.1, 0, 0, 0.1, 0, 0, 0.1, -0.0705, 1.1289, 0.1, 0, 0, 0, -0.0705, 1.1289, 0, 0, 1.1289, 0, -0.0705, 0, 0, 0, 1.1289, 0, 0, 0, 0, -0.0705, 0, 0.1, -0.0705, 1.1289, 0, -0.0705, 1.1289, 0.1, -0.0705, 0, 0.1, -0.0705, 0, 0, -0.0705, 1.1289, 0, -0.0705, 1.1289, 0.1, -0.0705, 1.1289, 0, 0, 1.1289, 0.1, 0, 1.1289, 0.1, -0.0705, 1.1289, 0, -0.0705, 1.1289, 0, 0, 0, 0.1, 0, 0, 0, -0.0705, 0, 0.1, -0.0705, 0, 0.1, 0, 0, 0, 0, 0, 0, -0.0705, 1.1289, 0.1, 0, 0, 0, 0, 0, 0.1, 0, 1.1289, 0.1, 0, 1.1289, 0, 0, 0, 0, 0)

[sub_resource type="BoxMesh" id="BoxMesh_fu6e8"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_1m0fr"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="CylinderMesh" id="CylinderMesh_2hxo2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ufi84"]
size = Vector3(3.61326, 3.64829, 1)

[node name="Checkpoint" type="Node3D"]
script = ExtResource("1_dk6rs")
metadata/NameCell = "Checkpoint"
metadata/isSelected = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.57973e-07, 0, 3.614, 0, 1, 0, -3.614, 0, -1.57973e-07, 2.04058, -0.0461872, 2.08847)
mesh = SubResource("ArrayMesh_purjp")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]
collision_layer = 5
collision_mask = 5
script = ExtResource("2_jp0c8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_c0nwu")

[node name="line" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.57953e-07, 0, -3.61354, 0, 1, 0, 3.61354, 0, -1.57953e-07, -0.122035, 0, -1.99524)
mesh = SubResource("ArrayMesh_yie71")

[node name="StaticBody3D" type="StaticBody3D" parent="line"]
collision_layer = 3
collision_mask = 3
script = ExtResource("2_i86x4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="line/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_0hiyn")

[node name="color" type="MeshInstance3D" parent="."]
transform = Transform3D(4.03837, 0, 0, 0, 0.122537, 0, 0, 0, 1, 0, 0.0177693, 0)
mesh = SubResource("BoxMesh_fu6e8")

[node name="StaticBody3D" type="StaticBody3D" parent="color"]
collision_layer = 8
collision_mask = 8
script = ExtResource("2_i86x4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="color/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_1m0fr")

[node name="flag" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.549682, 0)

[node name="checkpoint" type="MeshInstance3D" parent="flag"]
transform = Transform3D(6.34434, 0, 0, 0, -4.37114e-08, -6.34434, 0, 1, -2.7732e-07, -1.73817, 0.967552, -0.0273235)
mesh = ExtResource("3_5qipy")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="flag"]
transform = Transform3D(0.128056, 0, 0, 0, 1.56083, 0, 0, 0, 0.128056, 1.778, 0.495317, 0)
mesh = SubResource("CylinderMesh_2hxo2")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="flag"]
transform = Transform3D(0.128056, 0, 0, 0, 1.56083, 0, 0, 0, 0.128056, -1.778, 0.495, 0)
mesh = SubResource("CylinderMesh_2hxo2")
skeleton = NodePath("../..")

[node name="checkpoint2" type="MeshInstance3D" parent="flag"]
transform = Transform3D(-6.34434, -8.74228e-08, 2.42441e-14, 0, -4.37114e-08, -6.34434, 5.5464e-07, -1, 2.7732e-07, 1.71664, 0.967552, -0.0273235)
mesh = ExtResource("3_5qipy")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65309, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_ufi84")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_shape_entered" from="Area3D" to="." method="_on_area_3d_body_shape_entered"]
