[gd_scene load_steps=7 format=3 uid="uid://lr67b1cnl44v"]

[ext_resource type="Script" path="res://Scene/ConstructMap/3d/mapParts/StaticBody3D.gd" id="1_blhdn"]
[ext_resource type="Script" path="res://Scene/ConstructMap/3d/mapParts/SaveLoad.gd" id="1_gcuer"]
[ext_resource type="ArrayMesh" uid="uid://g02ujo540yoy" path="res://import/finish.res" id="1_hb8ll"]
[ext_resource type="Script" path="res://Scene/ConstructMap/3d/mapParts/line.gd" id="3_a0edy"]

[sub_resource type="CylinderMesh" id="CylinderMesh_33105"]

[sub_resource type="BoxShape3D" id="BoxShape3D_yd5fl"]
size = Vector3(3.61326, 3.64829, 1)

[node name="Finish" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 2)
script = ExtResource("1_gcuer")
metadata/NameCell = "Finish"
metadata/isSelected = true

[node name="floor" type="CSGBox3D" parent="."]
use_collision = true
collision_layer = 5
collision_mask = 5
size = Vector3(4, 0.1, 4)
script = ExtResource("1_blhdn")

[node name="sub" type="CSGBox3D" parent="floor"]
operation = 2
size = Vector3(0.3, 0.12, 4)

[node name="line" type="CSGBox3D" parent="."]
use_collision = true
collision_layer = 3
collision_mask = 3
size = Vector3(0.3, 0.1, 4)
script = ExtResource("3_a0edy")

[node name="flag" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="finishmodel" type="MeshInstance3D" parent="flag"]
transform = Transform3D(6.75371, 0, 0, 0, -4.37114e-08, 6.75371, 0, -1, -2.95214e-07, -1.73817, 2.96689, -0.0273235)
mesh = ExtResource("1_hb8ll")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="flag"]
transform = Transform3D(0.128056, 0, 0, 0, 1.56083, 0, 0, 0, 0.128056, 1.778, 1.51747, 0)
mesh = SubResource("CylinderMesh_33105")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="flag"]
transform = Transform3D(0.128056, 0, 0, 0, 1.56083, 0, 0, 0, 0.128056, -1.778, 1.51716, 0)
mesh = SubResource("CylinderMesh_33105")
skeleton = NodePath("../..")

[node name="Finish" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15275, -2.54117)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Finish"]
shape = SubResource("BoxShape3D_yd5fl")

[connection signal="body_entered" from="Finish" to="." method="_on_finish_body_entered"]
